# ws

./: .gitmodules  README.md  workspace.code-workspace
AnimGIFWallpaper/app/: build.gradle
_apart/: .editorconfig  README.md  package.json
_apart/components/: Sidenav.vue
_apart/layouts/: default.vue
_apart/pages/: index.vue
apart/: .env.example  .eslintrc.js  .firebaserc  .gitignore  README.md  docker-compose.yml  firestore.indexes.json  firestore.rules  nuxt.config.js  package.json  webpack.config.extend.js
apart/.firebase/: hosting.ZGlzdA.cache
apart/layouts/: default.vue
apart/pages/: index.vue
apart/store/: index.ts
apartment/: .editorconfig  .gitignore  LICENSE  README.md  tsconfig.json
apartment/_backend/: apartment.go
apartment/backend/: main.go
apartment/frontend/: index.d.ts  nuxt.config.js  package-lock.json  package.json  tsconfig.json
app/: .editorconfig  README.md
app/api/: .gitignore  README.md  go.mod  go.sum  main.go
app/components/: README.md  package.json  webpack.common.js  webpack.dev.js  webpack.prod.js
app/facade/: README.md  go.mod  (+2 more)
form/: package.json  webpack.common.js
gate/: gate.go  gate.yml  go.mod  go.sum
httml/: .editorconfig  .gitignore  Makefile  hoge.html
lmd/: .editorconfig  package.json  tsconfig.json  tslint.json  webpack.common.js  webpack.dev.js  webpack.prod.js
trashbox/: .eslintrc.js  .gitignore  package.json  tsconfig.json  webpack.common.js
tw/: .gitignore  Cargo.toml  README.md  twitter_application.example
tw/src/: main.rs
tw/src/app/: config.rs  mod.rs
tw/src/app/twitter/: mod.rs
(+288 files in other folders)
