[package]
name = "tw"
version = "0.1.0"
authors = ["mushus <mushus.wynd@gmail.com>"]

[dependencies]
egg-mode = "0.12.0"
clap = "2.20.3"
serde = "1.0.80"
serde_json = "1.0.32"
serde_derive = "1.0.80"
failure = "0.1.3"
failure_derive = "0.1.3"
app_dirs = "^1.2.1"
tokio-core = "0.1"
webbrowser = "0.3.1"
colored = "1.6"